# AI_Logs_System

./: .gitignore  docker-compose.yml
dashboard/: package-lock.json
dashboard/app/: page.tsx
log-producer/: Cargo.toml
log-producer/src/: main.rs
ml-detector/: detector.py
