[package]
name = "log-producer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1",features = ["full"]}
rdkafka = { version = "0.36", features = ["cmake-build"] }                          
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"                             
chrono = "0.4"                                
rand = "0.9"
